--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -4,7 +4,7 @@
 .minor-section {
     padding: 10px;
     margin-bottom: 10px;
-    border: solid 1px #d02424;
+    border: solid 1px #24b3d0;
     background-color: #d1b33a;
   }
 
