--- a/lab6/css/lab.css
+++ b/lab6/css/lab.css
@@ -1,9 +1,18 @@
-/* Here we can set styles for this lab page that we don't want to effect others pages */
-
-/* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 .minor-section {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
-  }
+  padding: 10px;
+  margin-bottom: 10px;
+  border: solid 1px #24b3d0;
+  background-color: #d1b33a;
+}
+
+section{
+background-color: rgb(22, 218, 127);
+}
+
+body {
+background-color: aqua;
+}
+img {
+  position:relative;
+  left: 220px; 
+}
