--- a/lab6/css/lab.css
+++ b/lab6/css/lab.css
@@ -10,7 +10,7 @@ background-color: rgb(22, 218, 127);
 }
 
 body {
-background-color: aqua;
+background-color: rgb(218, 26, 52);
 }
 img {
   position:relative;
