--- a/lab7/css/lab.css
+++ b/lab7/css/lab.css
@@ -3,29 +3,46 @@
     margin-bottom: 10px;
     border: solid 1px #24b3d0;
     background-color: #d1b33a;
-  }
-  
-  section{
-  background-color: rgb(22, 218, 127);
-  }
-  
-  body {
-  background-color: aqua;
-  }
+}
 
-  h1 {
+  
+section{
+  background-color: rgb(22, 218, 127);
+}
+  
+body {
+  background-color: aqua;
+}
+
+h1 {
     font-family: papyrus, fantasy;
     font-size: 88px;
     font-style: italic;
-    color: pink
-  }
+    font-style: bold;
+    color: pink      
+}
 
-  h2 {
+h1 {
+    position: relative;
+    top: 20px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+ 
+ h2 {
     font-family: Monaco, Monospace;
     font-size: 33px;
     color:rgb(174, 15, 218)
-  }
+}
 
 p {
     font-size: 22px; 
+}
+
+.name {
+    font-size: 24px;
+    font-weight: bold;
+    color: #ac1717;
+    font-family: cursive
 }
