--- a/lab11/css/lab.css
+++ b/lab11/css/lab.css
@@ -30,3 +30,20 @@ p {
 #results #target {
     color: rgb(136, 12, 202);
 }
+
+.button {
+    color: white;border: 1px solid #e4e4e4;padding: 8px;border-radius: 3px;cursor: pointer;
+ }
+ .blue {
+     background-color: blue
+ }
+ 
+ .red {
+     background-color:red
+ }
+ .green{    
+     background-color: green
+ }
+ .pink{
+     background-color: pink
+ }
